--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,7 +19,7 @@
 }
 
 a:hover {
-  color: #535bf2;
+  color: #979cff;
 }
 
 body {
@@ -61,10 +61,7 @@ button:focus-visible {
   text-align: center;
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+nav{
+  background-color: #111112ce;
+  backdrop-filter: blur(10px);
 }
